' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml Anwendungskern

!pragma useNewPackage
skinparam classAttributeIconSize 0
skinparam componentStyle uml2

package mongoose {
  class Schema

  class "model()" as model
  hide model circle
}

package gemaelde.entity {
  class "validateBuch()" as validateGemaelde
  hide validateGemaelde circle

  class GemaeldeModel
  hide GemaeldeModel circle

  GemaeldeModel ..> Schema
  GemaeldeModel ..> model
  GemaeldeModel ..> validateGemaelde

  GemaeldeData ..> Gemaeldeart
  GemaeldeData ..> Haendler
  GemaeldeData ..> Bewertung

  enum Gemaeldeart {
    OELGEMAELDE
    SIEBDRUCK
    WASSERFAREBENGEMAELDE
  }

  enum Haendler {
    BAR_HAENDLER
    FOO_HAENDLER
  }

  enum Bewertung {
    AAA
    AA
    A
    BBB
    BB
    B
    C
  }

  interface GemaeldeData <<entity>> {
    + _id?: string
    + __v?: number
    + createdAt?: number
    + updatedAt?: number
    + titel: string
    + beschreibung: string
    + bewertung: Bewertung
    + art: Gemaeldeart
    + haendler: Haendler
    + wert: number
    + ausgestellt: boolean
    + datum: Date
    + zertifizierung: string
    + kategorie?: Array<string>
    + kuenstler: unknown
  }
}

hide empty members

footer (c) Kevin Schwab

@enduml
